<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_track_trip"
        android:enabled="true"
        android:title="@string/text_track_trip"
        android:icon="@drawable/ic_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_trips"
        android:enabled="true"
        android:title="@string/text_trips"
        android:icon="@drawable/ic_trips"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:title="@string/text_profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/text_log_out"
        app:showAsAction="ifRoom" />
    <!--
   <item
       android:id="@+id/action_music"
       android:enabled="true"
       android:icon="@drawable/ic_audiotrack_white_24dp"
       android:title="@string/text_music"
       app:showAsAction="ifRoom" />-->
</menu>
