<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <tut.lbs.locationbasedsystem.views.FloatingLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_border"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </tut.lbs.locationbasedsystem.views.FloatingLabel>

            <tut.lbs.locationbasedsystem.views.FloatingLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <AutoCompleteTextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_border"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/prompt_short_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </tut.lbs.locationbasedsystem.views.FloatingLabel>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/loginbutton"
                    android:drawablePadding="6dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/registerbutton"
                    android:drawablePadding="6dp"
                    android:text="@string/action_register"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="6dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/action_forgot_password"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
